# llm-relay

./: Cargo.toml  README.md
src/: lib.rs
src/client/: chat.rs  embeddings.rs  error.rs  mod.rs  rig.rs  streaming.rs
src/convert/: cache_control.rs  mod.rs  thinking.rs  to_anthropic.rs  to_openai.rs  tool_names.rs
src/types/: anthropic.rs  common.rs  mod.rs  openai.rs
