[package]
name = "llm-relay"
version = "0.2.0"
edition = "2024"
description = "Shared types, format conversion, and HTTP client for Anthropic and OpenAI LLM APIs"
authors = ["Danila Gornushko <me@okhsunrog.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/okhsunrog/llm-relay"
keywords = ["llm", "anthropic", "openai", "ai"]
categories = ["api-bindings"]
readme = "README.md"
documentation = "https://docs.rs/llm-relay"

[features]
default = ["client"]
client = ["dep:reqwest", "dep:thiserror"]
embeddings = ["client"]

[dependencies]
reqwest = { version = "0.13.2", features = ["json"], optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = { version = "2.0.18", optional = true }
tracing = "0.1.44"
