[package]
name = "llm-relay"
version = "0.3.0"
edition = "2024"
description = "Shared types, format conversion, and HTTP client for Anthropic and OpenAI LLM APIs"
authors = ["Danila Gornushko <me@okhsunrog.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/okhsunrog/llm-relay"
keywords = ["llm", "anthropic", "openai", "ai"]
categories = ["api-bindings"]
readme = "README.md"
documentation = "https://docs.rs/llm-relay"

[features]
default = ["client"]
client = ["dep:reqwest", "dep:thiserror", "dep:tokio"]
embeddings = ["client"]
streaming = ["client", "reqwest/stream", "dep:eventsource-stream", "dep:futures-core", "dep:futures-util"]
rig = ["client", "dep:rig", "dep:http"]

[dependencies]
reqwest = { version = "0.13.4", features = ["json"], optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
schemars = "1.2.1"
thiserror = { version = "2.0.18", optional = true }
tracing = "0.1.44"
eventsource-stream = { version = "0.2.3", optional = true }
futures-core = { version = "0.3.32", optional = true }
futures-util = { version = "0.3.32", optional = true }
rig = { package = "rig-core", version = "0.40.0", optional = true }
http = { version = "1.4.2", optional = true }
tokio = { version = "1.52.4", features = ["time"], optional = true }

[dev-dependencies]
tokio = { version = "1.52.4", features = ["macros", "rt-multi-thread", "net", "io-util"] }
